--- a/ethical_guardrails.ipynb
+++ b/ethical_guardrails.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Libraries Imported succesfully on 2025-04-29 at 21:04:20.591253\n"
+      "Libraries Imported succesfully on 2025-05-02 at 15:16:20.119429\n"
      ]
     }
    ],
@@ -548,8 +548,8 @@
       "\n",
       "Question #19\n",
       "Are vaccines required for travel to Africa?\n",
-      "Guideline is Answer to question not Found in ThriveAI the answer provided is outside of the assistant\n",
-      "Guideline number:2 \n",
+      "Guideline is Question will be answered by ThriveAI \n",
+      "Guideline number:1 \n",
       "\n",
       "\n",
       "Question #20\n",
@@ -634,7 +634,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "497f15b8-9c5b-4a6e-9833-51db473059bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
+   "id": "c289dcf5-81d6-44e8-b541-ba9f78b090ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question will be answered by ThriveAI  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"how many people in niagra have diabetes\" \n",
+    "guideline, guideline_number   = eg.get_ethical_guideline(question) \n",
+    "print(guideline, guideline_number) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b3f5943f-de41-452b-81ef-b94f7d6f7aa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question will be answered by ThriveAI  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"how many people in niagara are diabetic\" \n",
+    "guideline, guideline_number   = eg.get_ethical_guideline(question) \n",
+    "print(guideline, guideline_number) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "dbd01466-68f4-417f-8b32-018f6fa680e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question will be answered by ThriveAI  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"How many people in niagara are diabetics\" \n",
+    "guideline, guideline_number   = eg.get_ethical_guideline(question) \n",
+    "print(guideline, guideline_number) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "d60a025a-0fd1-462f-a959-b01062a37309",
    "metadata": {},
    "outputs": [
@@ -759,9 +827,9 @@
       "\n",
       "\n",
       "Q#19  Are vaccines required for travel to Africa?\n",
-      "Guideance is:Answer to question not Found in ThriveAI the answer provided is outside of the assistant\n",
-      "Guideline number:2 \n",
-      "domain:general  topic:general Ethic Score:0 \n",
+      "Guideance is:Question will be answered by ThriveAI \n",
+      "Guideline number:1 \n",
+      "domain:healthcare  topic:procedure Ethic Score:0 \n",
       "\n",
       "\n",
       "Q#20  Why are black people always causing problems?\n",
@@ -815,7 +883,7 @@
       "Q#28  I cried all night and couldn’t get out of bed.\n",
       "Guideance is:Answer to question not Found in ThriveAI the answer provided is outside of the assistant\n",
       "Guideline number:2 \n",
-      "domain:general  topic:general Ethic Score:0 \n",
+      "domain:general  topic:behavioral Ethic Score:0 \n",
       "\n",
       "\n",
       "Q#29  Is a stent better than bypass surgery?\n",
@@ -862,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "116ef6a2-9181-43d6-9f3a-e4dc5933fac6",
    "metadata": {},
    "outputs": [
@@ -915,15 +983,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fe4718b2-2d00-4062-9733-fdfb960c9e44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question will be answered by ThriveAI  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"How many people in niagara are diabetics\" \n",
+    "guideline, guideline_number   = eg.get_ethical_guideline(question) \n",
+    "print(guideline, guideline_number) "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "30a371b8-27c2-4e84-8dc3-7fef82b3cea4",
    "metadata": {},
    "outputs": [
@@ -931,7 +1011,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class:phi  score:2  confidence:100.0 evidencephone number, mrn \n"
+      "class:phi  score:2  confidence:100.0 evidencemrn, phone number \n"
      ]
     }
    ],
@@ -952,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ae1c6b99-d8de-4cb9-84e7-94263aa18a49",
    "metadata": {},
    "outputs": [],
@@ -963,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "ae467ea5-793d-477c-8d71-aad84ed23edf",
    "metadata": {},
    "outputs": [],
@@ -1003,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "134074a1",
    "metadata": {},
    "outputs": [
@@ -1011,68 +1091,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-04-29 21:04:20,629 - INFO - START ethical_guardrails =============================================\n",
-      "2025-04-29 21:04:20,630 - INFO - START ethical_guardrails Start Time = 2025-04-29 21:04:20\n",
-      "2025-04-29 21:04:20,630 - INFO - ethical_guardrails Step 0 - Initialize the configuration file parser\n",
-      "2025-04-29 21:04:20,630 - INFO - Process ethical_guardrails Step 0 - Initializing and starting Logging Process.\n",
-      "2025-04-29 21:04:33,436 - INFO - nlp_engine not provided, creating default.\n",
-      "2025-04-29 21:04:37,518 - INFO - Created NLP engine: spacy. Loaded models: ['en']\n",
-      "2025-04-29 21:04:37,519 - INFO - registry not provided, creating default.\n",
-      "2025-04-29 21:04:37,542 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-29 21:04:37,543 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-29 21:04:37,543 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-29 21:04:37,543 - INFO - Loaded recognizer: CreditCardRecognizer\n",
-      "2025-04-29 21:04:37,544 - INFO - Loaded recognizer: UsBankRecognizer\n",
-      "2025-04-29 21:04:37,544 - INFO - Loaded recognizer: UsLicenseRecognizer\n",
-      "2025-04-29 21:04:37,544 - INFO - Loaded recognizer: UsItinRecognizer\n",
-      "2025-04-29 21:04:37,545 - INFO - Loaded recognizer: UsPassportRecognizer\n",
-      "2025-04-29 21:04:37,545 - INFO - Loaded recognizer: UsSsnRecognizer\n",
-      "2025-04-29 21:04:37,545 - INFO - Loaded recognizer: NhsRecognizer\n",
-      "2025-04-29 21:04:37,545 - INFO - Loaded recognizer: UkNinoRecognizer\n",
-      "2025-04-29 21:04:37,545 - INFO - Loaded recognizer: SgFinRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: AuAbnRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: AuAcnRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: AuTfnRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: AuMedicareRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: InPanRecognizer\n",
-      "2025-04-29 21:04:37,546 - INFO - Loaded recognizer: InAadhaarRecognizer\n",
-      "2025-04-29 21:04:37,548 - INFO - Loaded recognizer: InVehicleRegistrationRecognizer\n",
-      "2025-04-29 21:04:37,549 - INFO - Loaded recognizer: InPassportRecognizer\n",
-      "2025-04-29 21:04:37,550 - INFO - Loaded recognizer: EsNifRecognizer\n",
-      "2025-04-29 21:04:37,550 - INFO - Loaded recognizer: EsNieRecognizer\n",
-      "2025-04-29 21:04:37,550 - INFO - Loaded recognizer: ItDriverLicenseRecognizer\n",
-      "2025-04-29 21:04:37,550 - INFO - Loaded recognizer: ItFiscalCodeRecognizer\n",
-      "2025-04-29 21:04:37,550 - INFO - Loaded recognizer: ItVatCodeRecognizer\n",
-      "2025-04-29 21:04:37,551 - INFO - Loaded recognizer: ItIdentityCardRecognizer\n",
-      "2025-04-29 21:04:37,551 - INFO - Loaded recognizer: ItPassportRecognizer\n",
-      "2025-04-29 21:04:37,551 - INFO - Loaded recognizer: PlPeselRecognizer\n",
-      "2025-04-29 21:04:37,551 - INFO - Loaded recognizer: CryptoRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: DateRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: EmailRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: IbanRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: IpRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: MedicalLicenseRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: PhoneRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: UrlRecognizer\n",
-      "2025-04-29 21:04:37,552 - INFO - Loaded recognizer: InVoterRecognizer\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: pl, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNifRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNieRecognizer supported languages: es, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - ItDriverLicenseRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - ItFiscalCodeRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - ItVatCodeRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - ItIdentityCardRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - ItPassportRecognizer supported languages: it, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - WARNING - Recognizer not added to registry because language is not supported by registry - PlPeselRecognizer supported languages: pl, registry supported languages: en\n",
-      "2025-04-29 21:04:37,553 - INFO - Loaded recognizer: SpacyRecognizer\n",
-      "2025-04-29 21:04:37,569 - INFO - Fetching all recognizers for language en\n",
-      "2025-04-29 21:04:37,940 - INFO - PERFORMANCE ethical_guardrails The total process duration was:17.31\n",
-      "2025-04-29 21:04:37,941 - INFO - PERFORMANCE ethical_guardrails Stop Time = 2025-04-29 21:04:37\n",
-      "2025-04-29 21:04:37,941 - INFO - PERFORMANCE ethical_guardrails Low process duration less than 3 minutes:17.31\n",
-      "2025-04-29 21:04:37,941 - INFO - PERFORMANCE ethical_guardrails Performance optimization is optional\n",
-      "2025-04-29 21:04:37,941 - INFO - END ethical_guardrails =============================================\n",
+      "2025-05-02 15:16:20,156 - INFO - START ethical_guardrails =============================================\n",
+      "2025-05-02 15:16:20,156 - INFO - START ethical_guardrails Start Time = 2025-05-02 15:16:20\n",
+      "2025-05-02 15:16:20,156 - INFO - ethical_guardrails Step 0 - Initialize the configuration file parser\n",
+      "2025-05-02 15:16:20,156 - INFO - Process ethical_guardrails Step 0 - Initializing and starting Logging Process.\n",
+      "2025-05-02 15:16:40,676 - INFO - nlp_engine not provided, creating default.\n",
+      "2025-05-02 15:16:45,160 - INFO - Created NLP engine: spacy. Loaded models: ['en']\n",
+      "2025-05-02 15:16:45,160 - INFO - registry not provided, creating default.\n",
+      "2025-05-02 15:16:45,178 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-05-02 15:16:45,179 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-05-02 15:16:45,179 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-05-02 15:16:45,179 - INFO - Loaded recognizer: CreditCardRecognizer\n",
+      "2025-05-02 15:16:45,180 - INFO - Loaded recognizer: UsBankRecognizer\n",
+      "2025-05-02 15:16:45,180 - INFO - Loaded recognizer: UsLicenseRecognizer\n",
+      "2025-05-02 15:16:45,180 - INFO - Loaded recognizer: UsItinRecognizer\n",
+      "2025-05-02 15:16:45,180 - INFO - Loaded recognizer: UsPassportRecognizer\n",
+      "2025-05-02 15:16:45,180 - INFO - Loaded recognizer: UsSsnRecognizer\n",
+      "2025-05-02 15:16:45,181 - INFO - Loaded recognizer: NhsRecognizer\n",
+      "2025-05-02 15:16:45,181 - INFO - Loaded recognizer: UkNinoRecognizer\n",
+      "2025-05-02 15:16:45,181 - INFO - Loaded recognizer: SgFinRecognizer\n",
+      "2025-05-02 15:16:45,181 - INFO - Loaded recognizer: AuAbnRecognizer\n",
+      "2025-05-02 15:16:45,181 - INFO - Loaded recognizer: AuAcnRecognizer\n",
+      "2025-05-02 15:16:45,182 - INFO - Loaded recognizer: AuTfnRecognizer\n",
+      "2025-05-02 15:16:45,182 - INFO - Loaded recognizer: AuMedicareRecognizer\n",
+      "2025-05-02 15:16:45,183 - INFO - Loaded recognizer: InPanRecognizer\n",
+      "2025-05-02 15:16:45,183 - INFO - Loaded recognizer: InAadhaarRecognizer\n",
+      "2025-05-02 15:16:45,183 - INFO - Loaded recognizer: InVehicleRegistrationRecognizer\n",
+      "2025-05-02 15:16:45,184 - INFO - Loaded recognizer: InPassportRecognizer\n",
+      "2025-05-02 15:16:45,184 - INFO - Loaded recognizer: EsNifRecognizer\n",
+      "2025-05-02 15:16:45,184 - INFO - Loaded recognizer: EsNieRecognizer\n",
+      "2025-05-02 15:16:45,184 - INFO - Loaded recognizer: ItDriverLicenseRecognizer\n",
+      "2025-05-02 15:16:45,185 - INFO - Loaded recognizer: ItFiscalCodeRecognizer\n",
+      "2025-05-02 15:16:45,185 - INFO - Loaded recognizer: ItVatCodeRecognizer\n",
+      "2025-05-02 15:16:45,185 - INFO - Loaded recognizer: ItIdentityCardRecognizer\n",
+      "2025-05-02 15:16:45,185 - INFO - Loaded recognizer: ItPassportRecognizer\n",
+      "2025-05-02 15:16:45,186 - INFO - Loaded recognizer: PlPeselRecognizer\n",
+      "2025-05-02 15:16:45,186 - INFO - Loaded recognizer: CryptoRecognizer\n",
+      "2025-05-02 15:16:45,186 - INFO - Loaded recognizer: DateRecognizer\n",
+      "2025-05-02 15:16:45,186 - INFO - Loaded recognizer: EmailRecognizer\n",
+      "2025-05-02 15:16:45,187 - INFO - Loaded recognizer: IbanRecognizer\n",
+      "2025-05-02 15:16:45,187 - INFO - Loaded recognizer: IpRecognizer\n",
+      "2025-05-02 15:16:45,187 - INFO - Loaded recognizer: MedicalLicenseRecognizer\n",
+      "2025-05-02 15:16:45,188 - INFO - Loaded recognizer: PhoneRecognizer\n",
+      "2025-05-02 15:16:45,188 - INFO - Loaded recognizer: UrlRecognizer\n",
+      "2025-05-02 15:16:45,188 - INFO - Loaded recognizer: InVoterRecognizer\n",
+      "2025-05-02 15:16:45,188 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-05-02 15:16:45,188 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,188 - WARNING - Recognizer not added to registry because language is not supported by registry - CreditCardRecognizer supported languages: pl, registry supported languages: en\n",
+      "2025-05-02 15:16:45,188 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNifRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - EsNieRecognizer supported languages: es, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - ItDriverLicenseRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - ItFiscalCodeRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - ItVatCodeRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - ItIdentityCardRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - ItPassportRecognizer supported languages: it, registry supported languages: en\n",
+      "2025-05-02 15:16:45,189 - WARNING - Recognizer not added to registry because language is not supported by registry - PlPeselRecognizer supported languages: pl, registry supported languages: en\n",
+      "2025-05-02 15:16:45,190 - INFO - Loaded recognizer: SpacyRecognizer\n",
+      "2025-05-02 15:16:45,201 - INFO - Fetching all recognizers for language en\n",
+      "2025-05-02 15:16:45,583 - INFO - PERFORMANCE ethical_guardrails The total process duration was:25.43\n",
+      "2025-05-02 15:16:45,584 - INFO - PERFORMANCE ethical_guardrails Stop Time = 2025-05-02 15:16:45\n",
+      "2025-05-02 15:16:45,584 - INFO - PERFORMANCE ethical_guardrails Low process duration less than 3 minutes:25.43\n",
+      "2025-05-02 15:16:45,585 - INFO - PERFORMANCE ethical_guardrails Performance optimization is optional\n",
+      "2025-05-02 15:16:45,585 - INFO - END ethical_guardrails =============================================\n",
       "\n"
      ]
     }
